# ir-remote

./: .gitignore  .gitmodules
.github/workflows/: build_test_firmware.yml
enclosure/: enclosure.FCStd  enclosure.FCStd1
enclosure/production/: enclosure-bottom.step  enclosure-top.step
firmware/: CMakeLists.txt  Makefile  README.md  audio.hh  irremote.jdebug  t32.cmm
firmware/lib/stm32cubemx/: CMakeLists.txt
firmware/linker/: STM32G431XX_FLASH.ld
firmware/src/: CMakeLists.txt  audio_stream.hh  console.hh  controls.hh  debug.hh  main.cc  startup_stm32g431xx.s  system.hh
firmware/src/conf/: board_conf.hh  rcc_conf.hh  stm32g4xx_hal_conf.h
firmware/tests/: Makefile
ir-remote/: .mxproject  CMakeLists.txt  ir-remote.ioc  t32.cmm
ir-remote/Core/Inc/: nec.h  nec.hh  stm32g4xx_hal_conf.h
ir-remote/Core/Src/: capture.c  capture.cc  capture.hh  hal_init.cc  main.c  main.cc  nec.c  nec.cc  nec.hh  stm32g4xx_hal_msp.c  stm32g4xx_it.c
ir-remote/cmake/stm32cubemx/: CMakeLists.txt
minipeg/: system.c
pcb/: fp-lib-table  ir-remote.kicad_pcb  ir-remote.kicad_pro  ir-remote.kicad_sch  sym-lib-table
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pcb/production/jlcpcb-ordered-downloaded/: parts not placed.xlsx  parts used.xls
pcb/production/jlcpcb-ordered-downloaded/gerbers/ok/: 3046187a_y360.ddw  3046187a_y360.tgz  bl  bo  bs  drl  ko  sk  tl  to  ts
pcb/production/jlcpcb-ordered-downloaded/gerbers/yg/: 4te.json  GBR_10535677_1.json  fileset.json  ir-remote-B_Cu.gbl  ir-remote-B_Mask.gbs  ir-remote-B_Paste.gbp  ir-remote-B_Silkscreen.gbo  ir-remote-Edge_Cuts.gm1  ir-remote-F_Cu.gtl  ir-remote-F_Mask.gts  ir-remote-F_Paste.gtp  ir-remote-F_Silkscreen.gto  ir-remote-NPTH-drl_map.gbr  ir-remote-NPTH.drl  ir-remote-PTH-drl_map.gbr  ir-remote-PTH.drl
